# kma

api/: Cargo.toml  bun.lockb  package.json
api/src/: index.ts  main.rs
api/src/actions/: room.ts
ui/: bun.lockb
ui/src/app/: page.tsx
ui/src/components/: Login.tsx
ui/src/utils/: websocket.ts
