[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33.0", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.14"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
futures = { version = "0.3.29", default-features = false }
uuid = { version = "1.5.0", features = ["serde", "v4"] }
warp = "0.3.6"
